--- a/style.css
+++ b/style.css
@@ -1,1 +1,118 @@
 /* @import url(node_modules/normalize.css/normalize.css); */
+:root {
+    --logo-color: #fff;
+    --text-color: #000;
+    --error-text-color: #cc0000;
+    --logo-text:
+}
+
+* {
+    font-size: 100%;
+    /*16px*/
+
+}
+
+body {}
+
+@font-face {
+    font-family: odin-font;
+    src: url(/Norse-Bold.otf);
+
+}
+
+.page-grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 100vh;
+}
+
+.page-header {
+    background-color: brown;
+    position: relative;
+}
+
+
+
+.logo_page {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    height: 30%;
+    background-color: rgba(2, 2, 2, 0.37);
+}
+
+/* .figure-logo {
+    width: 100%;
+    height: 100%;
+
+} */
+
+.logo {
+    /* width: 100%; */
+    max-width: 80px;
+    height: auto;
+}
+
+.figure-image {
+    height: 100%;
+    width: 100%;
+}
+
+.hero {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    /* overflow: hidden; */
+}
+
+.hero-text {
+    color: white;
+    font-family: 'odin-font', 'monospace', sans-serif;
+    font-size: 4rem;
+
+}
+
+.main-page {
+    background-color: burlywood;
+    display: grid;
+
+
+}
+
+.main-page>* {
+    border: 1px solid red;
+}
+
+.main-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+    font-size: 1rem;
+}
+
+/* # Mobile  */
+@media only screen and (max-width: 480px) {
+    .page-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 300px 100vh;
+    }
+}
+
+/* # Tablet
+@media only screen and (min-width: 768px) {}  */
