--- a/style.css
+++ b/style.css
@@ -117,10 +117,34 @@ button {
     margin-top: 0.5rem;
 }
 
+.bg-link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    top: 90%;
+    color: var(--logo-color);
+    font-size: 90%;
+}
+
+.bg-a {
+    color: var(--logo-color);
+    text-decoration: underline;
+
+}
+
+.bg-a:hover {
+    color: var(--logo-color);
+
+}
+
 
 .form-wrapper {
     position: relative;
-    /* height: 30rem; */
     border: 1px solid #E5E7EB;
     -webkit-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.16);
     box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.16);
@@ -221,7 +245,7 @@ input:focus {
     .page-grid {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 200px 1fr;
+        grid-template-rows: 300px 1fr;
     }
 
     .logo_page {
