--- a/style.css
+++ b/style.css
@@ -30,11 +30,9 @@ button {
 
 @font-face {
     font-family: odin-font;
-    src: url(Norse-Bold.otf)
+    src: url(assets/Norse-Bold.otf);
+
 }
-
-
-
 
 
 
@@ -88,7 +86,7 @@ button {
 
 .hero-text {
     color: white;
-    font-family: 'odin-font', 'monospace', sans-serif;
+    font-family: 'odin-font', monospace, sans-serif;
     font-size: 4rem;
 
 }
