added asset folder

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button {
 
 @font-face {
     font-family: odin-font;
-    src: url(assets/Norse-Bold.otf);
+    src: url(./assets/Norse-Bold.otf);
 
 }
 
